HACKING: Add link to better zanata instructions

--- a/HACKING
+++ b/HACKING
@@ -59,9 +59,9 @@ format-patch output is fine too.
   ============
 
 Translations are handled at fedora.zanata.org. Please register for a Fedora
-account as described on the front page at:
+account and request access to a translation team, as described at:
 
-  https://fedora.zanata.org
+  http://fedoraproject.org/wiki/L10N/Translate_on_Zanata
 
 And contribute to virt-manager at:
 
