Update documentation to point to github, other minor tweaks

--- a/HACKING
+++ b/HACKING
@@ -42,17 +42,16 @@ entire glade file, you likely have a too old (or too new :) glade version.
   ==================
 
 Patches should be developed against a git checkout and _not_ a source
-release. The git repo is at
+release. The git repo is at:
 
-  git://git.fedorahosted.org/git/virt-manager.git
-
-For a web view, see:
-
-  https://git.fedorahosted.org/cgit/virt-manager.git/
+  https://github.com/virt-manager/virt-manager
 
 Patches should be sent to the mailing list (see README for details). Using
 git format-patch/send-email is preferred, but an attachment with
 format-patch output is fine too.
+
+Small patches are acceptable via github pull-request, but anything
+non-trivial should be sent to the mailing list.
 
 
   Translations
